--- a/server/package.json
+++ b/server/package.json
@@ -3,8 +3,15 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "prettier": "prettier --write 'controllers/**/*.js' 'lib/**/*.js'",
+    "eslint": "eslint controllers"
   },
   "author": "Pierre-Gilles Leymarie",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "eslint": "^5.13.0",
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-plugin-import": "^2.16.0"
+  }
 }
