--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,13 @@
   "devDependencies": {
     "eslint": "^5.13.0",
     "eslint-config-airbnb": "^17.1.0",
-    "eslint-plugin-import": "^2.16.0"
+    "eslint-plugin-import": "^2.16.0",
+    "npm-run-all": "^4.1.5"
+  },
+  "dependencies": {
+    "express": "^4.16.4",
+    "sequelize": "^4.42.0",
+    "sequelize-cli": "^5.4.0",
+    "sqlite3": "^4.0.6"
   }
 }
