--- a/server/package.json
+++ b/server/package.json
@@ -3,7 +3,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "./node_modules/mocha/bin/mocha ./test/bootstrap.test.js ./test/**/*.test.js --exit",
     "prettier": "prettier --write 'controllers/**/*.js' 'lib/**/*.js'",
     "eslint": "eslint controllers"
   },
@@ -13,9 +13,11 @@
     "eslint": "^5.13.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-plugin-import": "^2.16.0",
+    "mocha": "^5.2.0",
     "npm-run-all": "^4.1.5"
   },
   "dependencies": {
+    "bcrypt": "^3.0.3",
     "express": "^4.16.4",
     "sequelize": "^4.42.0",
     "sequelize-cli": "^5.4.0",
