--- a/server/package.json
+++ b/server/package.json
@@ -14,10 +14,13 @@
     "eslint-config-airbnb": "^17.1.0",
     "eslint-plugin-import": "^2.16.0",
     "mocha": "^5.2.0",
-    "npm-run-all": "^4.1.5"
+    "npm-run-all": "^4.1.5",
+    "should": "^13.2.3",
+    "supertest": "^3.4.2"
   },
   "dependencies": {
     "bcrypt": "^3.0.3",
+    "body-parser": "^1.18.3",
     "express": "^4.16.4",
     "sequelize": "^4.42.0",
     "sequelize-cli": "^5.4.0",
