--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "test": "./node_modules/mocha/bin/mocha ./test/bootstrap.test.js ./test/**/*.test.js --exit",
     "prettier": "prettier --write 'controllers/**/*.js' 'lib/**/*.js'",
-    "eslint": "eslint controllers"
+    "eslint": "eslint controllers",
+    "start": "nodemon index.js"
   },
   "author": "Pierre-Gilles Leymarie",
   "license": "MIT",
@@ -22,6 +23,8 @@
     "bcrypt": "^3.0.3",
     "body-parser": "^1.18.3",
     "express": "^4.16.4",
+    "http-errors": "^1.7.1",
+    "joi": "^14.3.1",
     "sequelize": "^4.42.0",
     "sequelize-cli": "^5.4.0",
     "sqlite3": "^4.0.6"
