--- a/server/package.json
+++ b/server/package.json
@@ -27,6 +27,7 @@
     "joi": "^14.3.1",
     "sequelize": "^4.42.0",
     "sequelize-cli": "^5.4.0",
-    "sqlite3": "^4.0.6"
+    "sqlite3": "^4.0.6",
+    "tracer": "^0.9.8"
   }
 }
