--- a/server/.eslintrc.json
+++ b/server/.eslintrc.json
@@ -1,6 +1,11 @@
 {
+  "plugins": [
+    "jsdoc",
+    "require-jsdoc"
+  ],
   "extends": [
-    "airbnb-base"
+    "airbnb-base",
+    "plugin:jsdoc/recommended"
   ],
   "parserOptions": {
       "ecmaVersion": 2018
@@ -56,6 +61,31 @@
       }],
       "brace-style": ["error", "1tbs", { 
         "allowSingleLine": false 
-      }]
+      }],
+      "jsdoc/check-examples": 0,
+      "jsdoc/check-param-names": 2,
+      "jsdoc/check-tag-names": 2,
+      "jsdoc/check-types": 2,
+      "jsdoc/newline-after-description": 2,
+      "jsdoc/no-undefined-types": 2,
+      "jsdoc/require-description": 2,
+      "jsdoc/require-description-complete-sentence": 2,
+      "jsdoc/require-example": 2,
+      "jsdoc/require-hyphen-before-param-description": 2,
+      "jsdoc/require-param": 2,
+      "jsdoc/require-param-description": 2,
+      "jsdoc/require-param-name": 2,
+      "jsdoc/require-param-type": 2,
+      "jsdoc/require-returns": 2,
+      "jsdoc/require-returns-check": 2,
+      "jsdoc/require-returns-description": 2,
+      "jsdoc/require-returns-type": 2,
+      "jsdoc/valid-types": 2,
+      "require-jsdoc": 2
+  },
+  "settings": {
+    "jsdoc": {
+        "captionRequired": true
+    }
   }
 }
