--- a/server/package.json
+++ b/server/package.json
@@ -6,8 +6,9 @@
     "pretest": "NODE_ENV=test node_modules/.bin/sequelize db:migrate",
     "test": "NODE_ENV=test ./node_modules/mocha/bin/mocha ./test/bootstrap.test.js ./test/**/*.test.js --exit",
     "prettier": "prettier --write 'controllers/**/*.js' 'lib/**/*.js'",
-    "eslint": "eslint controllers",
-    "start": "nodemon index.js"
+    "eslint": "eslint controllers lib models migrations middlewares config index.js",
+    "start": "nodemon index.js",
+    "jsdoc": "jsdoc lib/**/*.js"
   },
   "author": "Pierre-Gilles Leymarie",
   "license": "MIT",
@@ -15,6 +16,9 @@
     "eslint": "^5.13.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-plugin-import": "^2.16.0",
+    "eslint-plugin-jsdoc": "^4.1.0",
+    "eslint-plugin-require-jsdoc": "^1.0.4",
+    "jsdoc": "^3.5.5",
     "mocha": "^5.2.0",
     "npm-run-all": "^4.1.5",
     "should": "^13.2.3",
