--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,7 @@
     "pretest": "NODE_ENV=test node_modules/.bin/sequelize db:migrate",
     "test": "NODE_ENV=test ./node_modules/mocha/bin/mocha ./test/bootstrap.test.js ./test/**/*.test.js --exit",
     "prettier": "prettier --write 'controllers/**/*.js' 'lib/**/*.js'",
-    "eslint": "eslint controllers lib models migrations middlewares config index.js",
+    "eslint": "eslint controllers lib models migrations middlewares config utils test services index.js",
     "start": "nodemon index.js",
     "jsdoc": "jsdoc lib/**/*.js"
   },
