--- a/server/package.json
+++ b/server/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "pretest": "NODE_ENV=test node_modules/.bin/sequelize db:migrate",
     "test": "NODE_ENV=test ./node_modules/mocha/bin/mocha ./test/bootstrap.test.js ./test/**/*.test.js --exit",
+    "coverage": "nyc npm test && nyc report --reporter=text-lcov npm test > coverage.lcov",
     "prettier": "prettier --write 'controllers/**/*.js' 'lib/**/*.js'",
     "eslint": "eslint controllers lib models migrations middlewares config utils test services index.js",
     "start": "nodemon index.js",
@@ -23,6 +24,7 @@
     "jsdoc": "^3.5.5",
     "mocha": "^5.2.0",
     "npm-run-all": "^4.1.5",
+    "nyc": "^13.2.0",
     "should": "^13.2.3",
     "supertest": "^3.4.2"
   },
