--- a/server/package.json
+++ b/server/package.json
@@ -3,6 +3,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "clean:test": "shx --silent rm -f gladys-test.db && shx echo Cleaned test database",
     "pretest": "cross-env NODE_ENV=test node_modules/.bin/sequelize db:migrate",
     "test": "cross-env NODE_ENV=test ./node_modules/mocha/bin/mocha --recursive ./test/bootstrap.test.js \"./test/**/*.test.js\" --exit",
     "coverage": "nyc npm test && nyc report --reporter=text-lcov npm test > coverage.lcov",
@@ -28,6 +29,7 @@
     "npm-run-all": "^4.1.5",
     "nyc": "^13.2.0",
     "should": "^13.2.3",
+    "shx": "^0.3.2",
     "supertest": "^3.4.2"
   },
   "dependencies": {
