--- a/server/package.json
+++ b/server/package.json
@@ -4,12 +4,14 @@
   "main": "index.js",
   "scripts": {
     "clean:test": "shx --silent rm -f gladys-test.db && shx echo Cleaned test database",
-    "pretest": "cross-env NODE_ENV=test node_modules/.bin/sequelize db:migrate",
+    "pretest": "npm run db-migrate:test",
     "test": "cross-env NODE_ENV=test ./node_modules/mocha/bin/mocha --recursive ./test/bootstrap.test.js \"./test/**/*.test.js\" --exit",
     "coverage": "nyc npm test && nyc report --reporter=text-lcov npm test > coverage.lcov",
     "prettier": "prettier --write 'controllers/**/*.js' 'lib/**/*.js'",
     "eslint": "eslint api lib models migrations config utils test services index.js --ignore-pattern 'node_modules' ",
     "start": "nodemon index.js",
+    "db-migrate:dev": "cross-env NODE_ENV=development node_modules/.bin/sequelize db:migrate",
+    "db-migrate:test": "cross-env NODE_ENV=test node_modules/.bin/sequelize db:migrate",
     "jsdoc": "jsdoc lib/**/*.js -d jsdoc",
     "apidoc": "apidoc -i controllers/ -o apidoc/",
     "checkjs": "tsc --allowJs --checkJs --noEmit --target ES5 lib/**/*.js api/**/*.js services/**/*.js"
