--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,7 @@
     "prettier": "prettier --write 'controllers/**/*.js' 'lib/**/*.js'",
     "eslint": "eslint api lib models migrations config utils test services index.js --ignore-pattern 'node_modules' ",
     "start": "nodemon index.js",
+    "db-reset:dev": "cross-env NODE_ENV=development node_modules/.bin/sequelize db:migrate:undo:all",
     "db-migrate:dev": "cross-env NODE_ENV=development node_modules/.bin/sequelize db:migrate",
     "db-migrate:test": "cross-env NODE_ENV=test node_modules/.bin/sequelize db:migrate",
     "jsdoc": "jsdoc lib/**/*.js -d jsdoc",
