--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
     "start": "nodemon index.js",
     "db-reset:dev": "cross-env NODE_ENV=development node_modules/.bin/sequelize db:migrate:undo:all",
     "db-migrate:dev": "cross-env NODE_ENV=development node_modules/.bin/sequelize db:migrate",
+    "db-seed:dev": "cross-env NODE_ENV=development node_modules/.bin/sequelize db:seed:all",
     "db-migrate:test": "cross-env NODE_ENV=test node_modules/.bin/sequelize db:migrate",
     "jsdoc": "jsdoc lib/**/*.js -d jsdoc",
     "apidoc": "apidoc -i controllers/ -o apidoc/",
