--- a/server/package.json
+++ b/server/package.json
@@ -42,6 +42,7 @@
     "body-parser": "^1.18.3",
     "express": "^4.16.4",
     "joi": "^14.3.1",
+    "jsonwebtoken": "^8.4.0",
     "sequelize": "^4.42.0",
     "sequelize-cli": "^5.4.0",
     "sqlite3": "^4.0.6",
