--- a/server/package.json
+++ b/server/package.json
@@ -8,8 +8,9 @@
     "test": "cross-env NODE_ENV=test ./node_modules/mocha/bin/mocha --recursive ./test/bootstrap.test.js \"./test/**/*.test.js\" --exit",
     "coverage": "nyc npm test && nyc report --reporter=text-lcov npm test > coverage.lcov",
     "prettier": "prettier --write 'controllers/**/*.js' 'lib/**/*.js'",
+    "eslint-fix": "eslint --fix api lib models migrations config utils test services index.js --ignore-pattern 'node_modules' ",
     "eslint": "eslint api lib models migrations config utils test services index.js --ignore-pattern 'node_modules' ",
-    "start": "nodemon index.js",
+    "start": "cross-env NODE_ENV=development nodemon index.js",
     "db-reset:dev": "cross-env NODE_ENV=development node_modules/.bin/sequelize db:migrate:undo:all",
     "db-migrate:dev": "cross-env NODE_ENV=development node_modules/.bin/sequelize db:migrate",
     "db-seed:dev": "cross-env NODE_ENV=development node_modules/.bin/sequelize db:seed:all",
@@ -20,9 +21,13 @@
   },
   "author": "Pierre-Gilles Leymarie",
   "license": "MIT",
+  "nodemonConfig": {
+    "ignore": ["test/*"]
+  },
   "devDependencies": {
     "apidoc": "^0.17.7",
     "cross-env": "^5.2.0",
+    "dotenv": "^6.2.0",
     "eslint": "^5.13.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-plugin-import": "^2.16.0",
