--- a/server/.eslintrc.json
+++ b/server/.eslintrc.json
@@ -86,6 +86,12 @@
   },
   "overrides": [
     {
+      "files": ["services/**/*.js"],
+      "rules": {
+        "global-require": 0
+      }
+    },
+    {
       "files": ["api/controllers/**/*.js"],
       "rules": {
 
