--- a/server/package.json
+++ b/server/package.json
@@ -22,7 +22,9 @@
   "author": "Pierre-Gilles Leymarie",
   "license": "MIT",
   "nodemonConfig": {
-    "ignore": ["test/*"]
+    "ignore": [
+      "test/*"
+    ]
   },
   "nyc": {
     "exclude": [
@@ -43,6 +45,7 @@
     "mocha": "^5.2.0",
     "npm-run-all": "^4.1.5",
     "nyc": "^13.2.0",
+    "proxyquire": "^2.1.0",
     "should": "^13.2.3",
     "shx": "^0.3.2",
     "supertest": "^3.4.2"
