Add scripts to root package.json

--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "Gladys 4",
   "main": "index.js",
   "scripts": {
+    "postinstall": "cd server && npm install",
+    "start": "cd server && npm start",
     "test": "cd server && npm test"
   },
   "repository": {
