--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "postinstall": "cd server && npm install",
     "start": "cd server && npm start",
-    "test": "cd server && npm test"
+    "test": "cd server && npm test",
+    "db-migrate:dev": "cd server && npm run db-migrate:dev"
   },
   "repository": {
     "type": "git",
