--- a/package.json
+++ b/package.json
@@ -4,9 +4,15 @@
   "description": "Gladys 4",
   "main": "index.js",
   "scripts": {
-    "postinstall": "cd server && npm install",
-    "start": "cd server && npm start",
-    "test": "cd server && npm test",
+    "postinstall": "run-p install-server:dev install-front:dev",
+    "start": "run-p start-server:dev start-front:dev",
+    "test": "run-p test-server test-front",
+    "install-server:dev": "cd server && npm install",
+    "start-server:dev": "cd server && npm start",
+    "test-server": "cd server && npm test",
+    "install-front:dev": "cd front && npm install",
+    "start-front:dev": "cd front && npm start",
+    "test-front": "cd front && npm test",
     "db-migrate:dev": "cd server && npm run db-migrate:dev"
   },
   "repository": {
@@ -16,6 +22,7 @@
   "author": "Pierre-Gilles Leymarie",
   "license": "MIT",
   "devDependencies": {
+    "npm-run-all": "^4.1.5",
     "preact-cli-plugin-fast-async": "^1.0.1"
   }
 }
