--- a/front/package.json
+++ b/front/package.json
@@ -7,7 +7,7 @@
     "build": "preact build",
     "serve": "preact build && preact serve",
     "dev": "preact watch -p 1444",
-    "lint": "eslint src",
+    "eslint": "eslint src",
     "test": "jest"
   },
   "eslintIgnore": [
