--- a/server/package.json
+++ b/server/package.json
@@ -18,7 +18,7 @@
     "db-migrate:test": "cross-env NODE_ENV=test node_modules/.bin/sequelize db:migrate",
     "jsdoc": "jsdoc lib/**/*.js -d jsdoc",
     "apidoc": "apidoc -i controllers/ -o apidoc/",
-    "checkjs": "tsc --allowJs --checkJs --noEmit --lib ES5,ES2018 lib/**/*.js api/**/*.js services/**/*.js"
+    "checkjs": "tsc --allowJs --resolveJsonModule --checkJs --noEmit --lib ES5,ES2018 lib/**/*.js api/**/*.js services/**/*.js"
   },
   "author": "Pierre-Gilles Leymarie",
   "license": "MIT",
@@ -35,6 +35,8 @@
   },
   "devDependencies": {
     "apidoc": "^0.17.7",
+    "chai": "^4.2.0",
+    "chai-as-promised": "^7.1.1",
     "cross-env": "^5.2.0",
     "dotenv": "^6.2.0",
     "eslint": "^5.13.0",
@@ -47,7 +49,6 @@
     "npm-run-all": "^4.1.5",
     "nyc": "^13.2.0",
     "proxyquire": "^2.1.0",
-    "should": "^13.2.3",
     "shx": "^0.3.2",
     "supertest": "^3.4.2"
   },
@@ -58,6 +59,7 @@
     "express": "^4.16.4",
     "joi": "^14.3.1",
     "jsonwebtoken": "^8.4.0",
+    "node-nlp": "^2.4.1",
     "sequelize": "^4.42.0",
     "sequelize-cli": "^5.4.0",
     "sqlite3": "^4.0.6",
