--- a/server/package.json
+++ b/server/package.json
@@ -56,6 +56,7 @@
     "bcrypt": "^3.0.3",
     "bluebird": "^3.5.3",
     "express": "^4.16.4",
+    "handlebars": "^4.1.0",
     "joi": "^14.3.1",
     "jsonwebtoken": "^8.4.0",
     "node-nlp": "^2.4.1",
