--- a/server/package.json
+++ b/server/package.json
@@ -50,6 +50,7 @@
     "nyc": "^13.2.0",
     "proxyquire": "^2.1.0",
     "shx": "^0.3.2",
+    "sinon": "^7.2.4",
     "supertest": "^3.4.2"
   },
   "dependencies": {
