--- a/front/package.json
+++ b/front/package.json
@@ -23,11 +23,16 @@
     "preact-render-spy": "^1.2.1"
   },
   "dependencies": {
+    "@gladysassistant/gladys-gateway-js": "^1.1.0",
+    "axios": "^0.18.0",
+    "dotenv": "^6.2.0",
     "linkstate": "^1.1.1",
     "preact": "^8.2.6",
     "preact-compat": "^3.17.0",
+    "preact-i18n": "^1.2.2",
     "preact-router": "^2.5.7",
-    "tabler-ui": "0.0.32"
+    "tabler-ui": "0.0.32",
+    "unistore": "^3.2.1"
   },
   "jest": {
     "coverageDirectory": "./coverage/",
