First poc of all main screen

--- a/front/package.json
+++ b/front/package.json
@@ -4,7 +4,7 @@
     "start": "per-env",
     "start:production": "npm run -s serve",
     "start:development": "npm run -s dev",
-    "build": "preact build",
+    "build": "preact build --no-prerender",
     "serve": "preact build && preact serve",
     "dev": "preact watch -p 1444",
     "eslint": "eslint src",
@@ -22,12 +22,16 @@
   "dependencies": {
     "@gladysassistant/gladys-gateway-js": "^1.1.0",
     "axios": "^0.18.0",
+    "create-react-ref": "^0.1.0",
     "dotenv": "^6.2.0",
+    "leaflet": "^1.4.0",
     "linkstate": "^1.1.1",
+    "moment": "^2.24.0",
     "preact": "^8.2.6",
-    "preact-compat": "^3.17.0",
+    "preact-compat": "^3.18.4",
     "preact-i18n": "^1.2.2",
     "preact-router": "^2.5.7",
+    "react-big-calendar": "^0.20.3",
     "tabler-ui": "0.0.32",
     "unistore": "^3.2.1"
   },
