--- a/server/package.json
+++ b/server/package.json
@@ -61,6 +61,7 @@
     "joi": "^14.3.1",
     "jsonwebtoken": "^8.4.0",
     "node-nlp": "^2.4.1",
+    "queue": "^6.0.0",
     "sequelize": "^4.42.0",
     "sequelize-cli": "^5.4.0",
     "sqlite3": "^4.0.6",
