Eslint rules for controllers applies to service controllers as well

--- a/server/.eslintrc.json
+++ b/server/.eslintrc.json
@@ -92,7 +92,7 @@
       }
     },
     {
-      "files": ["api/controllers/**/*.js"],
+      "files": ["**/*.controller.js"],
       "rules": {
 
         "jsdoc/check-examples": 0,
