First version of device page working

--- a/front/package.json
+++ b/front/package.json
@@ -24,6 +24,7 @@
     "axios": "^0.18.0",
     "create-react-ref": "^0.1.0",
     "dotenv": "^6.2.0",
+    "immutability-helper": "^3.0.0",
     "leaflet": "^1.4.0",
     "linkstate": "^1.1.1",
     "moment": "^2.24.0",
