--- a/package.json
+++ b/package.json
@@ -13,7 +13,11 @@
     "install-front:dev": "cd front && npm install",
     "start-front:dev": "cd front && npm start",
     "test-front": "cd front && npm test",
-    "db-migrate:dev": "cd server && npm run db-migrate:dev"
+    "db-migrate:dev": "cd server && npm run db-migrate:dev",
+    "build:clean": "shx --silent rm -rf server/static",
+    "build-front": "cd front && npm run build",
+    "copy-front": "shx cp -R front/build server/static",
+    "build": "npm run build:clean && npm run build-front && npm run copy-front"
   },
   "repository": {
     "type": "git",
@@ -23,6 +27,6 @@
   "license": "MIT",
   "devDependencies": {
     "npm-run-all": "^4.1.5",
-    "preact-cli-plugin-fast-async": "^1.0.1"
+    "shx": "^0.3.2"
   }
 }
