--- a/server/package.json
+++ b/server/package.json
@@ -12,8 +12,10 @@
     "eslint-fix": "eslint --fix api lib models migrations config utils test services index.js --ignore-pattern 'node_modules' ",
     "eslint": "eslint api lib models migrations config utils test services index.js --ignore-pattern 'node_modules' ",
     "start": "cross-env NODE_ENV=development nodemon index.js",
+    "start:prod": "npm run db-migrate:prod && cross-env NODE_ENV=production node index.js",
     "db-reset:dev": "cross-env NODE_ENV=development node_modules/.bin/sequelize db:migrate:undo:all",
     "db-migrate:dev": "cross-env NODE_ENV=development node_modules/.bin/sequelize db:migrate",
+    "db-migrate:prod": "cross-env NODE_ENV=production node_modules/.bin/sequelize db:migrate",
     "db-seed:dev": "cross-env NODE_ENV=development node_modules/.bin/sequelize db:seed:all",
     "db-migrate:test": "cross-env NODE_ENV=test node_modules/.bin/sequelize db:migrate",
     "jsdoc": "jsdoc lib/**/*.js -d jsdoc",
@@ -37,7 +39,6 @@
     "apidoc": "^0.17.7",
     "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
-    "cross-env": "^5.2.0",
     "dotenv": "^6.2.0",
     "eslint": "^5.13.0",
     "eslint-config-airbnb": "^17.1.0",
@@ -56,11 +57,12 @@
   "dependencies": {
     "bcrypt": "^3.0.3",
     "bluebird": "^3.5.3",
+    "cross-env": "^5.2.0",
     "express": "^4.16.4",
     "handlebars": "^4.1.0",
     "joi": "^14.3.1",
     "jsonwebtoken": "^8.4.0",
-    "node-nlp": "^2.4.1",
+    "node-nlp": "^2.5.1",
     "queue": "^6.0.0",
     "sequelize": "^4.42.0",
     "sequelize-cli": "^5.4.0",
