--- a/server/package.json
+++ b/server/package.json
@@ -69,6 +69,7 @@
     "sequelize": "^4.42.0",
     "sequelize-cli": "^5.4.0",
     "sqlite3": "^4.0.6",
-    "tracer": "^0.9.8"
+    "tracer": "^0.9.8",
+    "ws": "^6.2.1"
   }
 }
