--- a/server/package.json
+++ b/server/package.json
@@ -5,8 +5,8 @@
   "scripts": {
     "postinstall": "node ./cli/install_service_dependencies.js",
     "clean:test": "shx --silent rm -f gladys-test.db && shx echo Cleaned test database",
-    "pretest": "npm run db-migrate:test && npm run eslint",
-    "test": "cross-env NODE_ENV=test ./node_modules/mocha/bin/mocha --recursive ./test/bootstrap.test.js \"./test/**/*.test.js\" --exit",
+    "pretest": "cross-env SQLITE_FILE_PATH=/tmp/gladys-test.db npm run db-migrate:test && npm run eslint",
+    "test": "cross-env SQLITE_FILE_PATH=/tmp/gladys-test.db NODE_ENV=test ./node_modules/mocha/bin/mocha --recursive ./test/bootstrap.test.js \"./test/**/*.test.js\" --exit",
     "coverage": "nyc npm test && nyc report --reporter=text-lcov npm test > coverage.lcov",
     "prettier": "prettier --write 'controllers/**/*.js' 'lib/**/*.js'",
     "eslint-fix": "eslint --fix api lib models migrations config utils test services index.js --ignore-pattern 'node_modules' ",
