--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,7 @@ addons:
     - ubuntu-toolchain-r-test
     packages:
     - g++-4.8
+    - libudev-dev
 
 services:
   - docker
@@ -18,8 +19,14 @@ env:
     - CXX=g++-4.8
 
 before_install:
+  - wget https://github.com/OpenZWave/open-zwave/archive/master.zip
+  - unzip master.zip
+  - cd open-zwave-master
+  - sudo make install
+  - sudo ldconfig /usr/local/lib /usr/local/lib64
+  - cd ..
   - cd server && npm install && cd ..
-  - npm install codecov typescript -g
+  - npm install codecov typescript node-gyp -g
 
 script:
   - cd server && npm run eslint && cd ..
