--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "scripts": {
     "postinstall": "node ./cli/install_service_dependencies.js",
-    "clean:test": "shx --silent rm -f gladys-test.db && shx echo Cleaned test database",
+    "clean:test": "shx --silent rm -f /tmp/gladys-test.db && shx echo Cleaned test database",
     "pretest": "cross-env SQLITE_FILE_PATH=/tmp/gladys-test.db npm run db-migrate:test && npm run eslint",
     "test": "cross-env SQLITE_FILE_PATH=/tmp/gladys-test.db NODE_ENV=test ./node_modules/mocha/bin/mocha --recursive ./test/bootstrap.test.js \"./test/**/*.test.js\" --exit",
     "coverage": "nyc npm test && nyc report --reporter=text-lcov npm test > coverage.lcov",
@@ -17,6 +17,7 @@
     "db-migrate:dev": "cross-env NODE_ENV=development node_modules/.bin/sequelize db:migrate",
     "db-migrate:prod": "cross-env NODE_ENV=production node_modules/.bin/sequelize db:migrate",
     "db-seed:dev": "cross-env NODE_ENV=development node_modules/.bin/sequelize db:seed:all",
+    "db-reset-seed:dev": "cross-env NODE_ENV=development node_modules/.bin/sequelize db:seed:undo:all",
     "db-migrate:test": "cross-env NODE_ENV=test node_modules/.bin/sequelize db:migrate",
     "jsdoc": "jsdoc lib/**/*.js -d jsdoc",
     "apidoc": "apidoc -i controllers/ -o apidoc/",
@@ -64,7 +65,7 @@
     "handlebars": "^4.1.0",
     "joi": "^14.3.1",
     "jsonwebtoken": "^8.4.0",
-    "node-nlp": "^2.5.1",
+    "node-nlp": "^3.0.3",
     "queue": "^6.0.0",
     "sequelize": "^4.42.0",
     "sequelize-cli": "^5.4.0",
