--- a/.travis.yml
+++ b/.travis.yml
@@ -19,7 +19,7 @@ env:
     - CXX=g++-4.8
 
 before_install:
-  - wget https://github.com/OpenZWave/open-zwave/archive/master.zip
+  - wget https://github.com/OpenZWave/open-zwave/archive/V1.5.zip
   - unzip master.zip
   - cd open-zwave-master
   - sudo make install
