Handle cors for blockstack

--- a/front/netlify.toml
+++ b/front/netlify.toml
@@ -2,3 +2,9 @@
   from = "/*"
   to = "/index.html"
   status = 200
+
+[[headers]]
+  for = "/assets/blockstack/manifest.json"
+
+  [headers.values]
+    access-control-allow-origin = "*"
