--- a/server/package.json
+++ b/server/package.json
@@ -50,6 +50,7 @@
     "eslint-plugin-require-jsdoc": "^1.0.4",
     "jsdoc": "^3.5.5",
     "mocha": "^5.2.0",
+    "mock-express-request": "^0.2.2",
     "npm-run-all": "^4.1.5",
     "nyc": "^13.3.0",
     "proxyquire": "^2.1.0",
