--- a/server/package.json
+++ b/server/package.json
@@ -51,6 +51,7 @@
     "jsdoc": "^3.5.5",
     "mocha": "^5.2.0",
     "mock-express-request": "^0.2.2",
+    "nodemon": "^1.19.0",
     "npm-run-all": "^4.1.5",
     "nyc": "^13.3.0",
     "proxyquire": "^2.1.0",
