Box user presence working, translated & with websockets

--- a/front/package.json
+++ b/front/package.json
@@ -23,6 +23,7 @@
     "@gladysassistant/gladys-gateway-js": "^1.1.0",
     "axios": "^0.18.0",
     "create-react-ref": "^0.1.0",
+    "dayjs": "^1.8.14",
     "dotenv": "^6.2.0",
     "immutability-helper": "^3.0.0",
     "leaflet": "^1.4.0",
