--- a/.editorconfig
+++ b/.editorconfig
@@ -11,3 +11,5 @@ trim_trailing_whitespace = true
 insert_final_newline = true
 indent_style = space
 indent_size = 2
+quote_type= single
+indent_brace_style= K&R
