--- a/front/.eslintrc.json
+++ b/front/.eslintrc.json
@@ -1,8 +1,42 @@
 {
-  "extends": "eslint-config-synacor",
+  "extends": [
+    "eslint-config-synacor",
+    "prettier"
+  ],
   "rules": {
-    "indent": ["error", 2],
-    "react/jsx-indent-props": [ "enabled", 2],
-    "brace-style": ["error", "1tbs"]
-  }
+    "indent": [
+      "error",
+      2,
+      {
+        "SwitchCase": 1
+      }
+    ],
+    "react/jsx-indent-props": [
+      "enabled",
+      2
+    ],
+    "brace-style": [
+      "error",
+      "1tbs"
+    ],
+    "object-curly-newline": [
+      "error",
+      {
+        "ObjectExpression": {
+          "minProperties": 1
+        },
+        "ObjectPattern": {
+          "multiline": true
+        },
+        "ImportDeclaration": "never",
+        "ExportDeclaration": {
+          "multiline": true,
+          "minProperties": 3
+        }
+      }
+    ]
+  },
+  "plugins": [
+    "json"
+  ]
 }
