--- a/front/package.json
+++ b/front/package.json
@@ -21,7 +21,8 @@
     "jest": "^21.2.1",
     "per-env": "^1.0.2",
     "preact-cli": "^2.1.0",
-    "preact-render-spy": "^1.2.1"
+    "preact-render-spy": "^1.2.1",
+    "prettier": "^1.17.1"
   },
   "dependencies": {
     "@gladysassistant/gladys-gateway-js": "^1.1.0",
