--- a/server/package.json
+++ b/server/package.json
@@ -10,8 +10,8 @@
     "coverage": "nyc npm test && nyc report --reporter=text-lcov npm test > coverage.lcov",
     "prettier-check": "prettier --check --write 'api/**/*.js' 'lib/**/*.js' 'models/**/*.js' 'migrations/**/*.js' 'config/**/*.js' 'utils/**/*.js' 'test/**/*.js' 'services/**/*.js' 'index.js'",
     "prettier": "prettier --write 'api/**/*.js' 'lib/**/*.js' 'models/**/*.js' 'migrations/**/*.js' 'config/**/*.js' 'utils/**/*.js' 'test/**/*.js' 'services/**/*.js' 'index.js'",
-    "eslint-fix": "eslint --fix api lib models migrations config utils test services index.js --ignore-pattern 'node_modules' ",
-    "eslint": "eslint api lib models migrations config utils test services index.js --ignore-pattern 'node_modules' ",
+    "eslint-fix": "eslint . --fix",
+    "eslint": "eslint .",
     "start": "cross-env NODE_ENV=development nodemon index.js",
     "start:prod": "npm run db-migrate:prod && cross-env NODE_ENV=production node index.js",
     "db-reset:dev": "cross-env NODE_ENV=development node_modules/.bin/sequelize db:migrate:undo:all",
