--- a/server/package.json
+++ b/server/package.json
@@ -8,8 +8,8 @@
     "pretest": "cross-env SQLITE_FILE_PATH=/tmp/gladys-test.db npm run db-migrate:test && npm run eslint",
     "test": "cross-env SQLITE_FILE_PATH=/tmp/gladys-test.db NODE_ENV=test ./node_modules/mocha/bin/mocha --recursive ./test/bootstrap.test.js \"./test/**/*.test.js\" --exit",
     "coverage": "nyc npm test && nyc report --reporter=text-lcov npm test > coverage.lcov",
-    "prettier-check": "prettier --check --write 'api/**/*.js' 'lib/**/*.js' 'models/**/*.js' 'migrations/**/*.js' 'config/**/*.js' 'utils/**/*.js' 'test/**/*.js' 'services/**/*.js' 'index.js'",
-    "prettier": "prettier --write 'api/**/*.js' 'lib/**/*.js' 'models/**/*.js' 'migrations/**/*.js' 'config/**/*.js' 'utils/**/*.js' 'test/**/*.js' 'services/**/*.js' 'index.js'",
+    "prettier-check": "prettier --check '**/*.js'",
+    "prettier": "prettier --write '**/*.js'",
     "eslint-fix": "eslint . --fix",
     "eslint": "eslint .",
     "start": "cross-env NODE_ENV=development nodemon index.js",
