--- a/front/package.json
+++ b/front/package.json
@@ -8,8 +8,8 @@
     "serve": "preact build && preact serve",
     "dev": "preact watch -p 1444",
     "eslint": "eslint src --ext .json --ext .js",
-    "prettier-check": "prettier --check '**/*.js' '**/*.jsx'",
-    "prettier": "prettier --write '**/*.js' '**/*.jsx'",
+    "prettier-check": "prettier --check '**/*.js' '**/*.jsx' '**/*.json'",
+    "prettier": "prettier --write '**/*.js' '**/*.jsx' '**/*.json'",
     "test": "jest --coverage"
   },
   "devDependencies": {
